all scss move in webpack

--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,11 @@
     <title>Blog</title>
     <script src="build/js/app.js"></script>
 </head>
-<body>
-    <p>asdada</p>
-    <p>asdada</p>
+<body id="app">
+    <div class="container-fluid" fit="fixed">
+        <div class="row" fit>
+
+        </div>
+    </div>
 </body>
 </html>
