--- a/www/index.html
+++ b/www/index.html
@@ -3,12 +3,11 @@
 <head>
     <title>Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <script src="build/js/app.js"></script>
 </head>
 <body id="app">
     <div class="container-fluid" fit="fixed">
         <div class="row" fit>
-            <div class="first-screen [col-lg-12 col-xs-12 ]" fit>
+            <div id="first-screen" class="first-screen [col-lg-12 col-xs-12 ]" fit>
                 <div class="first-screen__background" fit></div>
                 <div class="first-screen__text">
                     <h1>Блог о клиентской разработке</h1>
@@ -22,25 +21,24 @@
             </div>
         </div>
     </div>
-    <div id="content" class="_hide" fit="fixed">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>GSAP - мой выбор для анимаций.</h2>
-                    <p>
-                        Служба Яндекс.Рефераты предназначена для студентов и школьников, дизайнеров и журналистов, создателей научных заявок и отчетов — для всех, кто относится к тексту, как к количеству знаков.
-                    </p>
-                    <p>
-                        Нажав на кнопку «Написать реферат», вы лично создаете уникальный текст, причем именно от вашего нажатия на кнопку зависит, какой именно текст получится — таким образом, авторские права на реферат принадлежат только вам.
-                    </p>
-                        Теперь никто не сможет обвинить вас в плагиате, ибо каждый текст Яндекс.Рефератов неповторим.
-                    </p>
-                    <p>
-                        Текстами рефератов можно пользоваться совершенно бесплатно, однако при транслировании и предоставлении текстов в массовое пользование ссылка на Яндекс.Рефераты обязательна
-                    </p>
-                </div>
-            </div>
+    <div id="content" fit="fixed" class="hidden">
+        <div class="col-lg-12">
+            <h2>GSAP - мой выбор для анимаций.</h2>
+            <p>
+                Служба Яндекс.Рефераты предназначена для студентов и школьников, дизайнеров и журналистов, создателей научных заявок и отчетов — для всех, кто относится к тексту, как к количеству знаков.
+            </p>
+            <p>
+                Нажав на кнопку «Написать реферат», вы лично создаете уникальный текст, причем именно от вашего нажатия на кнопку зависит, какой именно текст получится — таким образом, авторские права на реферат принадлежат только вам.
+            </p>
+                Теперь никто не сможет обвинить вас в плагиате, ибо каждый текст Яндекс.Рефератов неповторим.
+            </p>
+            <p>
+                Текстами рефератов можно пользоваться совершенно бесплатно, однако при транслировании и предоставлении текстов в массовое пользование ссылка на Яндекс.Рефераты обязательна
+            </p>
         </div>
     </div>
+
+    <!-- SCRIPT -->
+    <script src="build/js/app.js"></script>
 </body>
 </html>
